# 3mf_bambu2prusa

./: AGENTS.md  README.md  bambu_to_prusa_gui.py  bambu_to_prusa_xml.py  pyproject.toml
bambu_to_prusa/: cloud_storage.py  settings.py  theme_engine.py
bambu_to_prusa/theme_plugins/: __init__.py  retro_terminal.py
docs/: FRONTEND_ARCHITECTURE.md  MIGRATION.md  STRUCTURE.md  steps.txt
docs/examples/: README.md  programmatic_usage.py
frontends/pyqt6/: main.py
scripts/: launch_gui.py  setup.py
tests/: test_cli.py  test_cloud_storage.py  test_converter.py  test_gui_helpers.py  test_no_merge_conflicts.py  test_settings.py
